Start implementing dependent type system

--- a/meson.build
+++ b/meson.build
@@ -20,6 +20,7 @@ libfu = library('libfu',
     'src/fu/lang/parser.c',
     'src/fu/lang/types.c',
     'src/fu/lang/type_table.c',
+    'src/fu/ir/node.c',
     'src/fu/driver/driver.c',
     'src/fu/driver/options.c'],
   include_directories: 'src',
