More work on basic module infrastructure

--- a/meson.build
+++ b/meson.build
@@ -21,6 +21,8 @@ libfu = library('libfu',
     'src/fu/lang/types.c',
     'src/fu/lang/type_table.c',
     'src/fu/ir/node.c',
+    'src/fu/ir/module.c',
+    'src/fu/ir/simplify.c',
     'src/fu/driver/driver.c',
     'src/fu/driver/options.c'],
   include_directories: 'src',
