Even more work on basic module infrastructure

--- a/meson.build
+++ b/meson.build
@@ -11,6 +11,7 @@ libfu = library('libfu',
     'src/fu/core/log.c',
     'src/fu/core/mem_pool.c',
     'src/fu/core/str_pool.c',
+    'src/fu/core/file_loc.c',
     'src/fu/core/dyn_array.c',
     'src/fu/core/utils.c',
     'src/fu/lang/ast.c',
