Implement free parameter tracking and parameter replacement

--- a/meson.build
+++ b/meson.build
@@ -21,9 +21,9 @@ libfu = library('libfu',
     'src/fu/lang/parser.c',
     'src/fu/lang/types.c',
     'src/fu/lang/type_table.c',
+    'src/fu/ir/containers/node_map.c',
+    'src/fu/ir/containers/node_set.c',
     'src/fu/ir/node.c',
-    'src/fu/ir/node_map.c',
-    'src/fu/ir/node_set.c',
     'src/fu/ir/import.c',
     'src/fu/ir/module.c',
     'src/fu/ir/simplify.c',
