Refactor importer and rename it to `Rewriter`

--- a/meson.build
+++ b/meson.build
@@ -24,7 +24,7 @@ libfu = library('libfu',
     'src/fu/ir/containers/node_map.c',
     'src/fu/ir/containers/node_set.c',
     'src/fu/ir/node.c',
-    'src/fu/ir/import.c',
+    'src/fu/ir/rewrite.c',
     'src/fu/ir/module.c',
     'src/fu/ir/simplify.c',
     'src/fu/driver/driver.c',
