WIP: Port type checker to use IR types

--- a/meson.build
+++ b/meson.build
@@ -21,8 +21,7 @@ libfu = library('libfu',
     'src/fu/lang/parser.c',
     'src/fu/lang/types.c',
     'src/fu/lang/type_table.c',
-    'src/fu/ir/containers/node_map.c',
-    'src/fu/ir/containers/node_set.c',
+    'src/fu/ir/containers.c',
     'src/fu/ir/node.c',
     'src/fu/ir/rewrite.c',
     'src/fu/ir/module.c',
